refactor($multiple): LottoNumbers 를 사용하도록 변경